# chronology

./: CMakeLists.txt  LICENSE  README.md  about_form.lfm  about_form.pas  build.sh  chronology.lpi  chronology.lpr  chronology.lps  chronology.res  chronoscheduler.pas  chronoutility.pas  create_form.lfm  create_form.pas  install.sh  license_form.pas  main_form.lfm  main_form.pas  resources.rc  settings_form.lfm  settings_form.pas
src/: about_form.lfm  about_form.pas  chronology-sched.pas  chronology.lpi  chronology.lpr  chronology.lps  chronology.res  chronoscheduler.pas  chronoutility.pas  create_form.lfm  create_form.pas  credits_form.lfm  credits_form.pas  jsontools.pas  main_form.lfm  main_form.pas  settings_form.lfm  settings_form.pas
src/backup/: chronology.lps
src/lib/x86_64-linux/: about_form.lfm  about_form.ppu  chronology.compiled  chronology.or  chronoscheduler.ppu  chronoutility.ppu  create_form.ppu  credits_form.ppu  jsontools.ppu  license_form.lfm  license_form.ppu  main_form.ppu  settings_form.ppu
support/: chronology.cron  org.kde.lk.chronology.policy
